# Frosthold-Launcher

./: .gitignore  BACKLOG.md  FrostMP-Launcher.py  NOTICE.md  README.md  _fh-watcher.ps1  _find-bt.sh  frostmp_core.py  frostmp_gui.py  rebuild_vs2022.bat
.cursor/rules/: frosthold-launcher-releases.mdc
.github/workflows/: release-launcher.yml
FrostholdRP-Launcher/: .gitignore  frosthold-manifest.json  launcher-bundled-defaults.json  main.js  news.json  package-lock.json  package.json  preload.js
FrostholdRP-Launcher/renderer/: index.html  renderer.js  styles.css
FrostholdRP-Launcher/scripts/: clean-dist.mjs  prepare-7zr.mjs  prepare-python-runtime.mjs  prepare-vcredist.mjs  release-launcher.mjs
chat-server/: config.example.json  config.json  package-lock.json  package.json  roles.mjs  server.mjs
skse-plugins/FrostholdConsoleBlock/: CMakeLists.txt  CMakePresets.json  FrostholdConsoleBlock.toml  build.ps1  vcpkg.json
skse-plugins/FrostholdConsoleBlock/src/: PCH.h  main.cpp
